# integrated-mod-installer

./: .gitignore  ReadMe.md  index.html  latest.json  package-lock.json  package.json  tsconfig.json  updater.py  vite.config.ts
src/: App.css  App.tsx  default.json  gameData.json  main.tsx
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  wallpaper_manager.rs
src/_Toaster/: ToastProvider.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  switch.tsx  tabs.tsx  toggle.tsx  tooltip.tsx
src/lib/: logger.ts
src/pages/: Dashboard.tsx  Settings.tsx  Updates.tsx
src/utils/: api.ts  consts.ts  decorations.tsx  errorCatcher.tsx  filesys.ts  init.ts  types.ts  utils.ts  vars.ts
