[package]
name = "integrated-mod-installer"
version = "1.0.0"
description = "A desktop mod installer for xxmi built with Tauri"
authors = ["YourBadLuck"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "integrated_mod_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "protocol-asset", "devtools", "image-ico", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
# Optimized reqwest with minimal features for smaller binary size
reqwest = { version = "0.13.1", features = ["stream", "native-tls"], default-features = false }
# Use tokio with only required features instead of "full"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "fs", "io-util", "macros"] }
futures-util = "0.3.31"
# HTTP server dependencies
warp = { version = "0.4.2", features = ["test"] }
mime_guess = "2.0.4"
# Additional async utilities
once_cell = "1.19.0"
log = "0.4.20"
urlencoding = "2.1.3"
tauri-plugin-tracing = "0.3"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-shell = "2"
wallpaper = "3.2.0"
base64 = "0.22.1"
image = "0.25"
# Windows-specific dependencies for hotreload functionality (legacy keybd_event only)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winnt",
    "psapi"
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# Testing dependencies for image server
[dev-dependencies]
tempfile = "3.24.0"

# Add optimization profile for release builds
[profile.release]
# Enable link-time optimization for smaller and faster binaries
lto = true
# Use one codegen unit for better optimization
codegen-units = 1
# Enable panic abort for smaller binary size (optional - removes stack traces)
panic = "abort"
# Strip symbols for smaller binary
strip = true
# Prioritizes small binary size. Use `3` if you prefer speed.
opt-level = "s"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
